package integration

import (
	"context"
	"crypto/md5"
	"fmt"
	"os"
	"path/filepath"
	"strings"
	"testing"
	"time"

	"github.com/footprintai/containarium/internal/client"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
)

const (
	// Test configuration
	defaultServerAddr = "localhost:50051"
	testTimeout       = 5 * time.Minute
	containerTimeout  = 2 * time.Minute
)

// TestStorageQuotaEnforcement verifies that ZFS quotas are enforced
func TestStorageQuotaEnforcement(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping integration test in short mode")
	}

	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
	defer cancel()

	serverAddr := getServerAddr(t)
	grpcClient := createGRPCClient(t, serverAddr)
	defer grpcClient.Close()

	t.Run("CreateContainerWithQuota", func(t *testing.T) {
		testCreateContainerWithQuota(t, ctx, grpcClient)
	})

	t.Run("QuotaEnforcementPreventsExceed", func(t *testing.T) {
		testQuotaEnforcement(t, ctx, grpcClient)
	})

	t.Run("MultipleContainersIsolation", func(t *testing.T) {
		testMultiContainerIsolation(t, ctx, grpcClient)
	})

	t.Run("CompressionEnabled", func(t *testing.T) {
		testCompression(t, ctx, grpcClient)
	})
}

// TestStoragePersistence verifies data persists across instance restarts
// This test requires GCP credentials and reboot capability
func TestStoragePersistence(t *testing.T) {
	if testing.Short() {
		t.Skip("Skipping persistence test in short mode")
	}

	// Check if this is a reboot test continuation
	stateFile := filepath.Join(os.TempDir(), "containarium-reboot-test-state.json")
	if isRebootTestContinuation(stateFile) {
		t.Log("Detected reboot test continuation...")
		testDataPersistenceAfterReboot(t, stateFile)
		return
	}

	// This is the initial run - set up test data and trigger reboot
	ctx, cancel := context.WithTimeout(context.Background(), testTimeout)
	defer cancel()

	serverAddr := getServerAddr(t)
	grpcClient := createGRPCClient(t, serverAddr)
	defer grpcClient.Close()

	t.Run("PrepareDataForRebootTest", func(t *testing.T) {
		testPrepareRebootData(t, ctx, grpcClient, stateFile)
	})
}

// testCreateContainerWithQuota tests basic container creation with quota
func testCreateContainerWithQuota(t *testing.T, ctx context.Context, grpcClient *client.GRPCClient) {
	username := fmt.Sprintf("test-quota-%d", time.Now().Unix())
	quotaGB := int64(10)

	t.Logf("Creating container for user: %s with %dGB quota", username, quotaGB)

	// Create container
	container, err := grpcClient.CreateContainer(
		username,
		"images:ubuntu/24.04",
		"2",                            // 2 CPUs
		"2GB",                          // 2GB RAM
		fmt.Sprintf("%dGB", quotaGB),   // 10GB disk
		[]string{},                     // No SSH keys for test
		false,                          // No Podman
		"",                             // No stack
	)
	require.NoError(t, err, "Failed to create container")
	require.NotNil(t, container)
	assert.Contains(t, container.Name, username)
	assert.Equal(t, "Running", container.State)

	// Cleanup
	defer func() {
		t.Logf("Cleaning up test container: %s", username)
		err := grpcClient.DeleteContainer(username, true)
		if err != nil {
			t.Logf("Warning: Failed to delete test container: %v", err)
		}
	}()

	// Wait for container to be fully ready
	time.Sleep(10 * time.Second)

	// Verify container exists and is running
	info, err := grpcClient.GetContainer(username)
	require.NoError(t, err)
	assert.Equal(t, "Running", info.State)
	t.Logf("✓ Container created successfully: %s (%s)", info.Name, info.IPAddress)
}

// testQuotaEnforcement tests that quotas prevent exceeding disk limits
func testQuotaEnforcement(t *testing.T, ctx context.Context, grpcClient *client.GRPCClient) {
	username := fmt.Sprintf("test-exceed-%d", time.Now().Unix())
	quotaGB := int64(5) // Small quota to test quickly

	t.Logf("Creating container with %dGB quota to test enforcement", quotaGB)

	// Create small container
	container, err := grpcClient.CreateContainer(
		username,
		"images:ubuntu/24.04",
		"1",
		"1GB",
		fmt.Sprintf("%dGB", quotaGB),
		[]string{},
		false,
		"",
	)
	require.NoError(t, err)
	require.NotNil(t, container)

	defer func() {
		grpcClient.DeleteContainer(username, true)
	}()

	time.Sleep(10 * time.Second)

	// Get container info to access via Incus
	info, err := grpcClient.GetContainer(username)
	require.NoError(t, err)

	t.Logf("Container %s created, testing quota enforcement...", info.Name)

	// Note: This test would require SSH access to the jump server to execute
	// incus commands. In a full integration test, you would:
	// 1. SSH to jump server
	// 2. Run: incus exec <container> -- dd if=/dev/zero of=/tmp/bigfile bs=1G count=10
	// 3. Verify it fails with "No space left on device"

	// For now, we verify the container was created with correct config
	t.Logf("✓ Container created with quota enforcement enabled")
	t.Logf("  (Full verification requires SSH access to jump server)")
}

// testMultiContainerIsolation tests that quotas are isolated between containers
func testMultiContainerIsolation(t *testing.T, ctx context.Context, grpcClient *client.GRPCClient) {
	timestamp := time.Now().Unix()
	user1 := fmt.Sprintf("test-alice-%d", timestamp)
	user2 := fmt.Sprintf("test-bob-%d", timestamp)

	t.Log("Creating multiple containers to test quota isolation...")

	// Create two containers with different quotas
	_, err := grpcClient.CreateContainer(user1, "images:ubuntu/24.04", "1", "1GB", "10GB", []string{}, false, "")
	require.NoError(t, err)
	defer grpcClient.DeleteContainer(user1, true)

	_, err = grpcClient.CreateContainer(user2, "images:ubuntu/24.04", "1", "1GB", "15GB", []string{}, false, "")
	require.NoError(t, err)
	defer grpcClient.DeleteContainer(user2, true)

	time.Sleep(10 * time.Second)

	// Verify both containers exist
	info1, err := grpcClient.GetContainer(user1)
	require.NoError(t, err)
	assert.Equal(t, "Running", info1.State)

	info2, err := grpcClient.GetContainer(user2)
	require.NoError(t, err)
	assert.Equal(t, "Running", info2.State)

	t.Logf("✓ Multiple containers created with isolated quotas")
	t.Logf("  - %s: 10GB quota", user1)
	t.Logf("  - %s: 15GB quota", user2)
}

// testCompression tests that ZFS compression is enabled
func testCompression(t *testing.T, ctx context.Context, grpcClient *client.GRPCClient) {
	username := fmt.Sprintf("test-compress-%d", time.Now().Unix())

	t.Log("Creating container to test compression...")

	_, err := grpcClient.CreateContainer(username, "images:ubuntu/24.04", "1", "1GB", "10GB", []string{}, false, "")
	require.NoError(t, err)
	defer grpcClient.DeleteContainer(username, true)

	time.Sleep(10 * time.Second)

	info, err := grpcClient.GetContainer(username)
	require.NoError(t, err)
	assert.Equal(t, "Running", info.State)

	t.Logf("✓ Container created (compression verification requires ZFS access)")
	t.Logf("  Verify compression with: zfs get compressratio incus-pool/containers/%s", info.Name)
}

// testPrepareRebootData creates test data before instance reboot
func testPrepareRebootData(t *testing.T, ctx context.Context, grpcClient *client.GRPCClient, stateFile string) {
	username := fmt.Sprintf("test-persist-%d", time.Now().Unix())
	testData := "TEST_DATA_" + generateRandomString(32)
	testDataHash := fmt.Sprintf("%x", md5.Sum([]byte(testData)))

	t.Logf("Creating container for persistence test: %s", username)

	// Create container
	container, err := grpcClient.CreateContainer(username, "images:ubuntu/24.04", "2", "2GB", "20GB", []string{}, false, "")
	require.NoError(t, err)
	require.NotNil(t, container)

	time.Sleep(15 * time.Second)

	// Verify container is running
	info, err := grpcClient.GetContainer(username)
	require.NoError(t, err)
	require.Equal(t, "Running", info.State)

	// Save test state for post-reboot verification
	state := RebootTestState{
		Username:     username,
		ContainerName: info.Name,
		TestData:     testData,
		TestDataHash: testDataHash,
		CreatedAt:    time.Now(),
	}

	err = saveRebootTestState(stateFile, &state)
	require.NoError(t, err)

	t.Logf("✓ Test container created and state saved")
	t.Logf("  Container: %s", info.Name)
	t.Logf("  Test data hash: %s", testDataHash)
	t.Logf("")
	t.Logf("=" + strings.Repeat("=", 70))
	t.Logf("REBOOT TEST PREPARATION COMPLETE")
	t.Logf("=" + strings.Repeat("=", 70))
	t.Logf("")
	t.Logf("Next steps:")
	t.Logf("  1. Write test data to container:")
	t.Logf("     sudo incus exec %s -- bash -c 'echo \"%s\" > /home/%s/test-data.txt'",
		info.Name, testData, username)
	t.Logf("")
	t.Logf("  2. Reboot the instance:")
	t.Logf("     sudo reboot")
	t.Logf("     OR")
	t.Logf("     gcloud compute instances stop <instance-name> && gcloud compute instances start <instance-name>")
	t.Logf("")
	t.Logf("  3. After reboot, run this test again:")
	t.Logf("     make test-integration")
	t.Logf("")
	t.Logf("=" + strings.Repeat("=", 70))
}

// testDataPersistenceAfterReboot verifies data survived the reboot
func testDataPersistenceAfterReboot(t *testing.T, stateFile string) {
	t.Log("Verifying data persistence after reboot...")

	// Load pre-reboot state
	state, err := loadRebootTestState(stateFile)
	require.NoError(t, err, "Failed to load reboot test state")

	t.Logf("Pre-reboot state loaded:")
	t.Logf("  Username: %s", state.Username)
	t.Logf("  Container: %s", state.ContainerName)
	t.Logf("  Expected data hash: %s", state.TestDataHash)
	t.Logf("  Created at: %s", state.CreatedAt.Format(time.RFC3339))

	// Connect to server
	serverAddr := getServerAddr(t)
	grpcClient := createGRPCClient(t, serverAddr)
	defer grpcClient.Close()

	// Verify container still exists
	info, err := grpcClient.GetContainer(state.Username)
	require.NoError(t, err, "Container not found after reboot!")
	assert.Equal(t, state.ContainerName, info.Name, "Container name mismatch")

	t.Logf("✓ Container still exists after reboot: %s", info.Name)
	t.Logf("  State: %s", info.State)
	t.Logf("  IP: %s", info.IPAddress)

	// Cleanup state file and container
	defer func() {
		os.Remove(stateFile)
		grpcClient.DeleteContainer(state.Username, true)
		t.Log("✓ Test cleanup complete")
	}()

	t.Logf("")
	t.Logf("=" + strings.Repeat("=", 70))
	t.Logf("REBOOT PERSISTENCE TEST PASSED")
	t.Logf("=" + strings.Repeat("=", 70))
	t.Logf("")
	t.Logf("To complete verification:")
	t.Logf("  1. Verify data integrity:")
	t.Logf("     sudo incus exec %s -- cat /home/%s/test-data.txt",
		info.Name, state.Username)
	t.Logf("")
	t.Logf("  2. Expected content: %s", state.TestData)
	t.Logf("  3. Expected hash: %s", state.TestDataHash)
	t.Logf("")
	t.Logf("✓ Container survived reboot with persistent disk!")
}

// Helper functions

func getServerAddr(t *testing.T) string {
	addr := os.Getenv("CONTAINARIUM_SERVER")
	if addr == "" {
		addr = defaultServerAddr
		t.Logf("Using default server address: %s", addr)
		t.Logf("Set CONTAINARIUM_SERVER environment variable to override")
	} else {
		t.Logf("Using server address from CONTAINARIUM_SERVER: %s", addr)
	}
	return addr
}

func createGRPCClient(t *testing.T, serverAddr string) *client.GRPCClient {
	// For integration tests, we'll use insecure connection for simplicity
	// In production, use mTLS certificates
	insecureMode := os.Getenv("CONTAINARIUM_INSECURE") == "true"

	var grpcClient *client.GRPCClient
	var err error

	if insecureMode {
		t.Log("Using insecure connection (no TLS)")
		// Use NewGRPCClient with insecure flag for insecure mode
		grpcClient, err = client.NewGRPCClient(serverAddr, "", true)
		require.NoError(t, err, "Failed to create gRPC connection")
	} else {
		// Use mTLS
		certsDir := os.Getenv("CONTAINARIUM_CERTS_DIR")
		if certsDir == "" {
			homeDir, _ := os.UserHomeDir()
			certsDir = filepath.Join(homeDir, ".config", "containarium", "certs")
		}

		grpcClient, err = client.NewGRPCClient(serverAddr, certsDir, false)
		require.NoError(t, err, "Failed to create gRPC client")
	}

	return grpcClient
}

func generateRandomString(length int) string {
	return fmt.Sprintf("%d", time.Now().UnixNano())[:length]
}
